Add forms for new collection objects on show pages

--- a/app/views/game_categories/_game_category_games.html.erb
+++ b/app/views/game_categories/_game_category_games.html.erb
@@ -26,7 +26,7 @@
     <div class="card-footer">
       <div class="collapse" id="game_category_games_new_form">
         <!-- New associationcollection form start -->
-
+        <%= render partial: "game_categories/game_category_games_new_form" %>
         <!-- New associationcollection form end -->
       </div>
     </div>
