--- a/app/views/games/_game_comments.html.erb
+++ b/app/views/games/_game_comments.html.erb
@@ -26,7 +26,7 @@
     <div class="card-footer">
       <div class="collapse" id="game_comments_new_form">
         <!-- New associationcollection form start -->
-
+        <%= render partial: "games/game_comments_new_form" %>
         <!-- New associationcollection form end -->
       </div>
     </div>
