Replace foreign key text inputs in attendees with dropdowns

--- a/app/views/attendees/_form.html.erb
+++ b/app/views/attendees/_form.html.erb
@@ -16,7 +16,7 @@
 
     <%= f.label :game_id %>
     <!-- Input for game_id start -->
-    <%= f.number_field :game_id, class: game_class, placeholder: "Enter game" %>
+    <%= f.collection_select :game_id, Game.all, :id, :to_s, {}, class: "form-control" %>
     <!-- Input for game_id end -->
     <% if game_was_invalid %>
       <% attendee.errors.full_messages_for(:game).each do |message| %>
