--- a/app/views/games/_game_attendees_new_form.html.erb
+++ b/app/views/games/_game_attendees_new_form.html.erb
@@ -33,7 +33,7 @@
     <%= f.label :player_id %>
 
     <!-- Input for player_id start -->
-    <%= f.text_field :player_id, class: "form-control" %>
+    <%= f.collection_select :player_id, User.all, :id, :to_s, {}, class: "form-control" %>
     <!-- Input for player_id end -->
   </div>
   <!-- Label and input for player_id end -->
