--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -38,6 +38,10 @@
       <div class="list-group list-group-flush">
         <%= render collection: @games, partial: "list_item", as: :game %>
       </div>
+      <div class="card-footer d-flex justify-content-center">
+        <%= paginate @games, theme: 'twitter-bootstrap-4' %>
+      </div>
+
     </div>
   </div>
 </div>
