--- a/app/views/messages/_card.html.erb
+++ b/app/views/messages/_card.html.erb
@@ -7,7 +7,11 @@
     <dl class="mb-1">
       <dt>Author</dt>
       <!-- Display author_id start -->
-      <dd><%= message.author_id %></dd>
+      <dd>
+        <% if @message.author.present? %>
+          <%= link_to message.author, message.author %>
+        <% end %>
+      </dd>
       <!-- Display author_id end -->
 
       <dt>Description</dt>
@@ -17,7 +21,11 @@
 
       <dt>Game</dt>
       <!-- Display game_id start -->
-      <dd><%= message.game_id %></dd>
+      <dd>
+        <% if @message.game.present? %>
+          <%= link_to message.game, message.game %>
+        <% end %>
+      </dd>
       <!-- Display game_id end -->
 
     </dl>
