--- a/app/views/game_categories/_game_categories_search_form.html.erb
+++ b/app/views/game_categories/_game_categories_search_form.html.erb
@@ -47,6 +47,10 @@
   </script>
 
 
+  <div class="form-group">
+    <%= f.label :games_description_cont, "Games description contains" %>
+    <%= f.text_field :games_description_cont, :class => "form-control", :placeholder => "Games description contains" %>
+  </div>
 
 
   <%= f.submit :class => "btn btn-primary btn-block mb-1" %>
