--- a/app/views/game_categories/_game_category_games_new_form.html.erb
+++ b/app/views/game_categories/_game_category_games_new_form.html.erb
@@ -32,9 +32,9 @@
   <%= f.hidden_field :game_category_id, value: @game_category.id %>
 
   <div class="form-group">
-    <%= f.label :loction %>
+    <%= f.label :location %>
 
-    <%= f.text_field :loction, class: "form-control" %>
+    <%= f.text_field :location, class: "form-control" %>
   </div>
 
   <%= f.submit "Create game", class: "btn btn-block btn-outline-secondary" %>
