--- a/app/views/games/_card.html.erb
+++ b/app/views/games/_card.html.erb
@@ -31,7 +31,7 @@
         <% end %>
       </dd>
 
-      <dt>Loction</dt>
+      <dt>Location</dt>
       <dd>
         <div>
           <%= render partial: "games/one_photo_map" %>
