--- a/app/views/users/_user_games_new_form.html.erb
+++ b/app/views/users/_user_games_new_form.html.erb
@@ -32,9 +32,9 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :loction %>
+    <%= f.label :location %>
 
-    <%= f.text_field :loction, class: "form-control" %>
+    <%= f.text_field :location, class: "form-control" %>
   </div>
 
   <%= f.submit "Create game", class: "btn btn-block btn-outline-secondary" %>
