--- a/app/views/attendees/_attendees_search_form.html.erb
+++ b/app/views/attendees/_attendees_search_form.html.erb
@@ -57,6 +57,11 @@
     <%= f.text_field :player_username_cont, :class => "form-control", :placeholder => "Player username contains" %>
   </div>
 
+  <div class="form-group">
+    <%= f.label :game_description_cont, "Game description contains" %>
+    <%= f.text_field :game_description_cont, :class => "form-control", :placeholder => "Game description contains" %>
+  </div>
+
 
   <%= f.submit :class => "btn btn-primary btn-block mb-1" %>
 
