--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -134,21 +134,21 @@
     <% end %>
   </div>
   <div class="form-group">
-    <% loction_class = "form-control" %>
-    <% loction_was_invalid = game.errors.include?(:loction) %>
+    <% location_class = "form-control" %>
+    <% location_was_invalid = game.errors.include?(:location) %>
 
     <% if was_validated %>
-      <% if loction_was_invalid %>
-        <% loction_class << " is-invalid" %>
+      <% if location_was_invalid %>
+        <% location_class << " is-invalid" %>
       <% else %>
-        <% loction_class << " is-valid" %>
+        <% location_class << " is-valid" %>
       <% end %>
     <% end %>
 
-    <%= f.label :loction %>
-    <%= f.text_field :loction, class: loction_class, placeholder: "Enter loction" %>
-    <% if loction_was_invalid %>
-      <% game.errors.full_messages_for(:loction).each do |message| %>
+    <%= f.label :location %>
+    <%= f.text_field :location, class: location_class, placeholder: "Enter location" %>
+    <% if location_was_invalid %>
+      <% game.errors.full_messages_for(:location).each do |message| %>
         <div class="invalid-feedback d-flex">
           <%= message %>
         </div>
