--- a/app/views/games/_game_messages.html.erb
+++ b/app/views/games/_game_messages.html.erb
@@ -1,14 +1,14 @@
 <div class="card">
   <div class="card-header d-flex align-items-center justify-content-between">
-    Comments
+    Messages
 
-    <a data-toggle="collapse" href="#game_comments_new_form">
+    <a data-toggle="collapse" href="#game_messages_new_form">
       Add message
     </a>
   </div>
 
   <ul class="list-group list-group-flush">
-    <% @game.comments.each do |message| %>
+    <% @game.messages.each do |message| %>
       <li class="list-group-item d-flex align-items-center justify-content-between">
         <%= link_to message, message %>
 
@@ -20,8 +20,8 @@
     <% end %>
 
     <div class="card-footer">
-      <div class="collapse" id="game_comments_new_form">
-        <%= render partial: "games/game_comments_new_form" %>
+      <div class="collapse" id="game_messages_new_form">
+        <%= render partial: "games/game_messages_new_form" %>
       </div>
     </div>
 
