--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -6,7 +6,7 @@
 
 <div class="row justify-content-center mb-3">
   <div class="col-md-8">
-    <%= render partial: "games/game_comments" %>
+    <%= render partial: "games/game_messages" %>
   </div>
 </div>
 
