--- a/app/views/messages/_messages_search_form.html.erb
+++ b/app/views/messages/_messages_search_form.html.erb
@@ -52,6 +52,11 @@
     <%= f.text_field :author_username_cont, :class => "form-control", :placeholder => "Author username contains" %>
   </div>
 
+  <div class="form-group">
+    <%= f.label :game_description_cont, "Game description contains" %>
+    <%= f.text_field :game_description_cont, :class => "form-control", :placeholder => "Game description contains" %>
+  </div>
+
 
   <%= f.submit :class => "btn btn-primary btn-block mb-1" %>
 
