--- a/app/views/users/_user_joined_games.html.erb
+++ b/app/views/users/_user_joined_games.html.erb
@@ -1,10 +1,10 @@
 <div class="card">
   <div class="card-header d-flex align-items-center justify-content-between">
-    Accepted Games
+    Joined Games
   </div>
 
   <ul class="list-group list-group-flush">
-    <% @user.accepted_games.each do |game| %>
+    <% @user.joined_games.each do |game| %>
       <li class="list-group-item d-flex align-items-center justify-content-between">
         <a href="/games/<%= game.id %>">
           <%= game %>
