--- a/app/views/users/_users_search_form.html.erb
+++ b/app/views/users/_users_search_form.html.erb
@@ -52,6 +52,20 @@
   </script>
 
 
+  <div class="form-group">
+    <%= f.label :games_description_cont, "Games description contains" %>
+    <%= f.text_field :games_description_cont, :class => "form-control", :placeholder => "Games description contains" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :joined_games_description_cont, "Joined games description contains" %>
+    <%= f.text_field :joined_games_description_cont, :class => "form-control", :placeholder => "Joined games description contains" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :messages_description_cont, "Messages description contains" %>
+    <%= f.text_field :messages_description_cont, :class => "form-control", :placeholder => "Messages description contains" %>
+  </div>
 
 
   <%= f.submit :class => "btn btn-primary btn-block mb-1" %>
