--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,7 +24,7 @@
 
 <div class="row justify-content-center mb-3">
   <div class="col-md-8">
-    <%= render partial: "users/user_accepted_games" %>
+    <%= render partial: "users/user_joined_games" %>
   </div>
 </div>
 
