--- a/app/views/game_categories/_game_categories_search_form.html.erb
+++ b/app/views/game_categories/_game_categories_search_form.html.erb
@@ -48,8 +48,8 @@
 
 
   <div class="form-group">
-    <%= f.label :games_description_cont, "Games description contains" %>
-    <%= f.text_field :games_description_cont, :class => "form-control", :placeholder => "Games description contains" %>
+    <%= f.label :categories_description_cont, "Categories description contains" %>
+    <%= f.text_field :categories_description_cont, :class => "form-control", :placeholder => "Categories description contains" %>
   </div>
 
 
