--- a/app/views/games/_games_search_form.html.erb
+++ b/app/views/games/_games_search_form.html.erb
@@ -134,8 +134,8 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :game_category_name_cont, "Game category name contains" %>
-    <%= f.text_field :game_category_name_cont, :class => "form-control", :placeholder => "Game category name contains" %>
+    <%= f.label :game_type_name_cont, "Game type name contains" %>
+    <%= f.text_field :game_type_name_cont, :class => "form-control", :placeholder => "Game type name contains" %>
   </div>
 
   <div class="form-group">
