--- a/app/views/users/_users_search_form.html.erb
+++ b/app/views/users/_users_search_form.html.erb
@@ -53,18 +53,18 @@
 
 
   <div class="form-group">
-    <%= f.label :games_description_cont, "Games description contains" %>
-    <%= f.text_field :games_description_cont, :class => "form-control", :placeholder => "Games description contains" %>
+    <%= f.label :games_hosted_description_cont, "Games hosted description contains" %>
+    <%= f.text_field :games_hosted_description_cont, :class => "form-control", :placeholder => "Games hosted description contains" %>
   </div>
 
   <div class="form-group">
-    <%= f.label :joined_games_description_cont, "Joined games description contains" %>
-    <%= f.text_field :joined_games_description_cont, :class => "form-control", :placeholder => "Joined games description contains" %>
+    <%= f.label :games_joined_description_cont, "Games joined description contains" %>
+    <%= f.text_field :games_joined_description_cont, :class => "form-control", :placeholder => "Games joined description contains" %>
   </div>
 
   <div class="form-group">
-    <%= f.label :messages_description_cont, "Messages description contains" %>
-    <%= f.text_field :messages_description_cont, :class => "form-control", :placeholder => "Messages description contains" %>
+    <%= f.label :game_messages_description_cont, "Game messages description contains" %>
+    <%= f.text_field :game_messages_description_cont, :class => "form-control", :placeholder => "Game messages description contains" %>
   </div>
 
 
