--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,30 +6,30 @@
 
 <div class="row justify-content-center mb-3">
   <div class="col-md-8">
-    <%= render partial: "users/user_comments" %>
+    <%= render partial: "users/user_games_hosted" %>
   </div>
 </div>
 
 <div class="row justify-content-center mb-3">
   <div class="col-md-8">
-    <%= render partial: "users/user_games" %>
-  </div>
-</div>
-
-<div class="row justify-content-center mb-3">
-  <div class="col-md-8">
-    <%= render partial: "users/user_attendees" %>
-  </div>
-</div>
-
-<div class="row justify-content-center mb-3">
-  <div class="col-md-8">
-    <%= render partial: "users/user_joined_games" %>
+    <%= render partial: "users/user_games_attending" %>
   </div>
 </div>
 
 <div class="row justify-content-center mb-3">
   <div class="col-md-8">
     <%= render partial: "users/user_messages" %>
+  </div>
+</div>
+
+<div class="row justify-content-center mb-3">
+  <div class="col-md-8">
+    <%= render partial: "users/user_games_joined" %>
+  </div>
+</div>
+
+<div class="row justify-content-center mb-3">
+  <div class="col-md-8">
+    <%= render partial: "users/user_game_messages" %>
   </div>
 </div>
