--- a/app/views/games/_card.html.erb
+++ b/app/views/games/_card.html.erb
@@ -26,8 +26,8 @@
 
       <dt>Game category</dt>
       <dd>
-        <% if @game.game_category.present? %>
-          <%= link_to game.game_category, game.game_category %>
+        <% if @game.game_type.present? %>
+          <%= link_to game.game_type, game.game_type %>
         <% end %>
       </dd>
 
