--- a/app/views/users/_user_games_hosted.html.erb
+++ b/app/views/users/_user_games_hosted.html.erb
@@ -1,14 +1,14 @@
 <div class="card">
   <div class="card-header d-flex align-items-center justify-content-between">
-    Games
+    Games Hosted
 
-    <a data-toggle="collapse" href="#user_games_new_form">
+    <a data-toggle="collapse" href="#user_games_hosted_new_form">
       Add game
     </a>
   </div>
 
   <ul class="list-group list-group-flush">
-    <% @user.games.each do |game| %>
+    <% @user.games_hosted.each do |game| %>
       <li class="list-group-item d-flex align-items-center justify-content-between">
         <%= link_to game, game %>
 
@@ -20,8 +20,8 @@
     <% end %>
 
     <div class="card-footer">
-      <div class="collapse" id="user_games_new_form">
-        <%= render partial: "users/user_games_new_form" %>
+      <div class="collapse" id="user_games_hosted_new_form">
+        <%= render partial: "users/user_games_hosted_new_form" %>
       </div>
     </div>
 
