--- a/app/views/games/_games_search_form.html.erb
+++ b/app/views/games/_games_search_form.html.erb
@@ -134,6 +134,11 @@
   </div>
 
   <div class="form-group">
+    <%= f.label :messages_description_cont, "Messages description contains" %>
+    <%= f.text_field :messages_description_cont, :class => "form-control", :placeholder => "Messages description contains" %>
+  </div>
+
+  <div class="form-group">
     <%= f.label :game_type_name_cont, "Game type name contains" %>
     <%= f.text_field :game_type_name_cont, :class => "form-control", :placeholder => "Game type name contains" %>
   </div>
