--- a/app/views/users/_users_search_form.html.erb
+++ b/app/views/users/_users_search_form.html.erb
@@ -58,6 +58,11 @@
   </div>
 
   <div class="form-group">
+    <%= f.label :messages_description_cont, "Messages description contains" %>
+    <%= f.text_field :messages_description_cont, :class => "form-control", :placeholder => "Messages description contains" %>
+  </div>
+
+  <div class="form-group">
     <%= f.label :games_joined_description_cont, "Games joined description contains" %>
     <%= f.text_field :games_joined_description_cont, :class => "form-control", :placeholder => "Games joined description contains" %>
   </div>
